See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.38.0

              pamtogif: Speed up for monochrome images.  Thanks
              Prophet of the Way <afu@wta.att.ne.jp>.

              pamtogif: Add -aspect.  Thanks
              Prophet of the Way <afu@wta.att.ne.jp>.

              Add pamfixtrunc.

              pamditherbw: Add -atkinson.

              pammixinterlace: Add -filter and fir and ffmpeg filters.
              Thanks Bruce Guenter <bruce@untroubled.org>.

              pammixinterlace: Add -adaptive.
              Thanks Bruce Guenter <bruce@untroubled.org>.

              pambackground: recognize mid-row background.

              ppm3d: Change default offset to zero columns.

              ppm3d: Add -color option.

              ppm3d: Add -offset option as alternative to offset argument.

              jpegtopnm: Add -repair option.

              giftopnm: Add -repair option.

              libnetpbm: shhopt: reject signed number as value for
              OPT_UINT option.

              libnetpbm: in the "no such option" error message, say what
              the valid options are.

              libnetpbm: Embellish "bad magic number" error message.

              pnmremap: fix incorrect output with map file deeper than
              input file.

              pnmtopclxl: fix -feeder, -outtray options.  Thanks
              "Eric K. Olson" <olson@mauicomputing.com>.

              picttoppm: Fix wild memory reference in all use cases.

              picttoppm: Fix for multi-pixel-per-byte image in which
              it says the image has a row that is too long (because of
              padding).

              pamtogif: fix crash with -mapfile.

              ppmtogif: handle case that map file and input file are not
              the same depth, as was the case with the original ppmtogif.
              Run the input through pnmremap.
